[package]
name = "db_meter"
version = "0.1.0"
authors = ["Christof Laenzlinger <laenzlinger@github.com>"]
license = "GPL-3.0-only"
edition = "2018"

# Plugins are dynamic libraries. This setting tells cargo to export it this way.
[lib]
crate-type = ["cdylib"]

[dependencies]
lv2 = "0.6.0"

[patch.crates-io]
lv2  = { git = 'https://github.com/RustAudio/rust-lv2.git', branch = 'develop' }
lv2-atom  = { git = 'https://github.com/RustAudio/rust-lv2.git', branch = 'develop' }
lv2-core  = { git = 'https://github.com/RustAudio/rust-lv2.git', branch = 'develop' }
lv2-midi  = { git = 'https://github.com/RustAudio/rust-lv2.git', branch = 'develop' }
lv2-units  = { git = 'https://github.com/RustAudio/rust-lv2.git', branch = 'develop' }
lv2-urid  = { git = 'https://github.com/RustAudio/rust-lv2.git', branch = 'develop' }
