[package]
name = "db_meter"
version = "0.1.0"
authors = ["Christof Laenzlinger <laenzlinger@github.com>"]
license = "GPL-3.0-only"
edition = "2018"

# Plugins are dynamic libraries. This setting tells cargo to export it this way.
[lib]
crate-type = ["cdylib"]

[dependencies]
lv2 = "0.6.0"
wmidi = "3.1.0"
ebur128 = "0.1.7"

[patch.crates-io]
lv2  = { git = 'https://github.com/RustAudio/rust-lv2.git', rev = 'b6d02f38d40ade7f17af542b9a7b496044ddf821' }
lv2-atom  = { git = 'https://github.com/RustAudio/rust-lv2.git', rev = 'b6d02f38d40ade7f17af542b9a7b496044ddf821' }
lv2-core  = { git = 'https://github.com/RustAudio/rust-lv2.git', rev = 'b6d02f38d40ade7f17af542b9a7b496044ddf821' }
lv2-midi  = { git = 'https://github.com/RustAudio/rust-lv2.git', rev = 'b6d02f38d40ade7f17af542b9a7b496044ddf821' }
lv2-units  = { git = 'https://github.com/RustAudio/rust-lv2.git', rev = 'b6d02f38d40ade7f17af542b9a7b496044ddf821' }
lv2-urid  = { git = 'https://github.com/RustAudio/rust-lv2.git', rev = 'b6d02f38d40ade7f17af542b9a7b496044ddf821' }
